--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
       <title>Rello Chat-live</title>
       <link rel="stylesheet" href="/css/main.css" />
-      <link rel="icon" href="rello.png">
+      <link rel="icon" href="rello.ico">
       
   </head>
   <body>
